@@ -549,6 +549,7 @@ extern const FFInputFormat  ff_image_j2k_pipe_demuxer;
 extern const FFInputFormat  ff_image_jpeg_pipe_demuxer;
 extern const FFInputFormat  ff_image_jpegls_pipe_demuxer;
 extern const FFInputFormat  ff_image_jpegxl_pipe_demuxer;
+extern const FFInputFormat  ff_image_jpegxs_pipe_demuxer;
 extern const FFInputFormat  ff_image_pam_pipe_demuxer;
 extern const FFInputFormat  ff_image_pbm_pipe_demuxer;
 extern const FFInputFormat  ff_image_pcx_pipe_demuxer;
